# Abhishek-Agentic-Learning

./: 1_pydantic.py  README.md  data.csv  data.json  graph.ipynb  requirements.txt  simplegraph.py
3-Langraph/: .env  chatbotmultitool.ipynb
Countstring/: browser_mcp.json  client.py  main.py  pyproject.toml  requirements.txt  server.py
Human_Detection/: agent.py  mcp.json  server.py
Langgraph/:  tools.json  Payload.py  client.py  data.csv  load_tools_fromMCP.py  mcp_browser.json  requirements.txt  server.py
Persist_memory/: .env  browser_mcp.json  graph.py  main.py  memory_store.py  requirements.txt  run_mcp_assistant.py  test.py
Persist_memory/memory/: memory.json
RAG/: chunks.pkl  embed.py  ingest.py  my_data.txt  query_llm.py  requirements.txt  retriever_setup.py
SimpleMultiAgent/: main.py  pyproject.toml
Stockagent/: .env  Dockerfile  client.py  pyproject.toml  requirements.txt  stock_agent.py  stock_assistant.py  stock_mcp.json
Weather/: sever.py
currency/: client.py  currency_mcp.json  server.py
demo/: .env  ai_assistant.py  client.py  maths.py  pyproject.toml  requirements.txt  tools_mcp.json  weather.py
financeagent/: .env  building-financial-analyst.ipynb  finance_crew.py  financial_analyst.mcp.json  pyproject.toml  requirements.txt  stock_analysis.py  test.py
mcpdemo/: app.py  browser_mcp.json  requirements.txt
mcpdockeragent/: .env  Dockerfile  browser_mcp.json  count_string.py  docker-compose.yml  maths.py  mcp_assistant.py  weather.py
output_dataframes/: output_dataframe_20250718_114015.csv  output_dataframe_20250718_163253.csv
(+6 files in other folders)
