[project]
name = "financial-analysis-agent"
version = "0.1.0"
description = "A CrewAI-based financial analysis system"
dependencies = [
    "crewai",
    "yfinance",
    "pydantic>=2.6.0",
    "crewai-tools",
    "mcp",
    "ollama>=0.5.1",
    "pandas>=2.2.2",
    "matplotlib>=3.8.4",
    "ipykernel>=6.29.4",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
